.ipynb_checkpoints/temp-checkpoint.out
  File "temp.py", line 1
    %matplotlib widget
    ^
SyntaxError: invalid syntax
